# arac-profil-olusturucu

./: .gitignore  DEGISIKLIK_OZETI.md  ORNEK_CIKTI_FORMATI.md  README.md  index.html  package-lock.json  package.json  vite.config.js
public/data/: marka.txt  model.txt  yil.txt
src/: App.css  App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/services/: aiService.js
src/styles/: appStyles.js
src/utils/: jsonUtils.js
